<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="Senyum">SENYUM</string>
    <string name="Ceria">CERIA</string>
    <string name="Beranda">BERANDA</string>
    <string name="app_name">Senyum Ceria</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="imageViewDescription"></string>
    <string name="Memulai...">Memulai</string>
    <string name="perawatangigi">Perawatan</string>
     <string name="perawatangigidua">Gigi</string>
	<string name="video">Video</string>
	<string name="pengingat">Pengingat</string>
	<string name="pengingat2">Gigi Sehat</string>
	<string name="SikatGigiPagi">Sikat Gigi Pagi</string>
	<string name="hapus">Hapus</string>
	<string name="atur">Atur</string>
	<string name="SikatGigiSiang">Sikat Gigi Siang</string>
	<string name="hapusSiang">Hapus</string>
	<string name="aturSiang">Atur</string>
	<string name="SikatGigiMalam">Sikat Gigi Malam</string>
	<string name="hapusMalam">Hapus</string>
	<string name="aturMalam">Atur</string>
	<string name="periksagigi">Check Up Gigi</string>
	<string name="hapusPeriksa">Hapus</string>
	<string name="aturPeriksa">Atur</string>
	<string name="SimpanAturPagi">Simpan</string>
	<string name="BatalAturPagi">Batal</string>
	<string name="SimpanAturMalam">Simpan</string>
	<string name="BatalAturMalam">Batal</string>
	<string name="SimpanAturCheckUp">Simpan</string>
	<string name="BatalAturCheckUp">Batal</string>
	<string name="Bantuan">Bantuan</string>
	<string name="Tentang">Tentang</string>
	<string name="tipsgigisehat">Tips</string>
	<string name="tipsgigisehatdua">Gigi Sehat</string>
	<string name="keluar">Keluar</string>
	<string name="anatomi">Struktur</string>
	<string name="anatomi2">Fungsi Gigi</string>
	
	<!-- content tips waktu sikat  -->
	<string name="BangunTidur">1. PAGI HARI SETELAH BANGUN TIDUR</string>
	<string name="SetelahMakan">2. SETELAH MAKAN</string>
	<string name="SebelumTidur">3. SEBELUM TIDUR</string>
	
	<string name="WaktuSikatGigiPagi">Biasakan menyikat gigimu PAGI SETELAH BANGUN TIDUR, 
	    Menyikat gigi di pagi hari setelah bangun tidur akan membersihkan gigi dan menyegarkan
	    mulut.</string>
	    
	    
	<string name="WaktuSikatGigiSetelahMakan">Biasakan menyikat gigimu SETELAH MAKAN,
	    Menyikat gigi setelah makan supaya sisa makanan tidak menempel di gigi
	    terlalu lama.</string>
	    
	    
	<string name="WaktuSikatGigiMalam">Biasakan menyikat gigimu SEBELUM TIDUR. 
	    Menyikat gigi di malam hari juga sangat penting. Sisa makanan akan menempel dalam waktu yang lama saat kita
	    tidur.</string>
	    
	
	<!-- fungsi gigi  -->
	<string name="GigiSeri">1. GIGI SERI</string>
	<string name="GigiTaring">2. GIGI TARING</string>
	<string name="GigiGeraham">3. GIGI GERAHAM</string>
	
	
	
	<string name="TextGigiSeri">Gigi SERI berfungsi untuk MEMOTONG makanan. Gigi ini selalu terlihat dideretan
	    terdepan saat tersenyum. Gigi seri berjumlah 8, 4 gigi atas dan 4 gigi bawah.</string>
	    
	<string name="TextGigiGeraham">Gigi GERAHAM terletak di belakang dan berfungsi untuk MENGGILING makanan.
	    Gigi geraham biasanya berjumlah 8, 4 gigi diatas dan 4 gigi dibawah. Pada orang dewasa jumlahnya
	    bertambah menjadi 12, 6 gigi diatas dan 6 gigi dibawah.</string>
	    
	<string name="TextGigiTaring">Gigi TARING berada disebelah gigi seri, bentuknya seperti tombak.
		Gigi taring merupakan gigi yang paling tajam dan berfungsi
	    untuk MENGOYAK makanan. Gigi taring berjumlah 4, 2 gigi atas dan 2 gigi bawah.</string>
	    
	<!-- CONTENT TIPS MEMILIH ODOL  -->
	
	<string name="TextMemilihOdol">Pasta gigi yang sebaiknya digunakan adalah pasta gigi yang mengandung
	    FLUORIDE. Pasta gigi yang mengandung fluoride akan membuat gigi kita bersih, putih, sehat, dan kuat.</string>
	    
	<!--  TIPS MEMILIH SIKAT -->
	
	<string name="TextMemilihSikat1">1. Berbulu lunak, tidak terlalu kaku.</string>
	<string name="TextMemilihSikat2">2. Permukaan bulu sikat harus rata, supaya tekanan yang diberikan pada
	    gigi sama rata. </string>
	<string name="TextMemilihSikat3">3. Panjang bulu sikat tak boleh lebih dari permukaan 3 gigi.</string>
	<string name="TextMemilihSikat4">4. Tangkai sikat lurus. </string>
	
	<!-- TIPS MAKANAN YANG BAIK UNTUK GIGI -->
	
	<string name="TextMakananBaik">Perbanyaklah mengkonsumsi makanan yang banyak mengandung kalsium, phospor,
	    vitamin 2A, C dan D untuk memperkuat lapisan gigi. Biasanya kandungan makanan tersebut terdapat pada buah, sayur,
	    daging, dan susu.</string>
	
	
	    
	<!-- BANTUAN  -->
	<string name="PerawatanGigi">1. PERAWATAN GIGI</string>
	<string name="StrukturGigi">2. STRUKTUR DAN FUNGSI GIGI</string>
	<string name="PengingatGigi">3. PENGINGAT GIGI SEHAT </string>
	<string name="TipsGigi">4. TIPS GIGI SEHAT </string>
	<string name="VideoGigi">5. VIDEO </string>
	<string name="Keluar">6. KELUAR </string>
	<string name="BantuanJudul">7. BANTUAN </string>
	<string name="TentangJudul">8. TENTANG </string>
	<string name="PutarSuara">9. PUTAR SUARA</string>
	<string name="StopSuara">10. MATIKAN SUARA</string>
	<string name="JedaSuara">11. JEDA SUARA</string>
	
	<string name="TextPerawatanGigi">Menu perawatan gigi digunakan untuk menampilkan daftar perawatan gigi.
	    Untuk melihat detail informasi klik nama perawatan yang ingin dilihat. </string>
	 
	<string name="TextStrukturGigi">Menu struktur dan fungsi gigi digunakan untuk menampilkan daftar struktur dan fungsi gigi.
	    Untuk melihat detail informasi klik nama daftar yang ingin dilihat.  </string>
	    
	<string name="TextPengingatGigi">Menu pengingat gigi sehat digunakan untuk mengatur jadwal sikat gigi pagi, sikat gigi
	    malam dan jadwal check up gigi. Setelah dilakukan pengaturan jadwal, maka akan muncul notifikasi pada waktu
	    yang telah ditentukan.  </string>
	 
	<string name="TextTipsGigi">Menu tips gigi sehat digunakan untuk menampilkan daftar tips menjaga kesehatan gigi.
	    Untuk melihat detail informasi klik nama tips yang ingin dilihat.  </string>
	    
	<string name="TextVideoGigi">Menu video digunakan untuk menampilkan informasi tentang
	    perawatan gigi, struktur dan fungsi gigi, dan tips menjaga kesehatan gigi dalam bentuk video. </string>
	    
	<string name="TextKeluar">Menu keluar digunakan untuk menutup aplikasi.  </string>
	
	<string name="TextBantuan">Menu bantuan berisi tentang informasi penggunaan aplikasi. </string>
	
	<string name="TextTentang">Menu tentang berisi mengenai informasi aplikasi. </string>
	
	<string name="TextPutar">Pada halaman detail informasi dilengkapi dengan suara audio.
	    Untuk memainkan audio pengguna dapat meng klik icon ini
	    </string>
	    
	<string name="TextStop">Pada halaman detail informasi dilengkapi dengan suara audio.
	    Untuk mematikan audio pengguna dapat meng klik icon ini
	    </string>
	    
	<string name="TextJeda">Pada halaman detail informasi dilengkapi dengan suara audio.
	    Untuk menjeda audio pengguna dapat meng klik icon ini
	    </string>
	    
	
	
	
	
	<!-- ANATOMI GIGI  -->
	
	<string name="MahkotaGigi">1. MAHKOTA GIGI</string>
	<string name="AkarGigi">2. AKAR GIGI</string>
	<string name="EmailGigi">3. EMAIL </string>
	<string name="DentinGigi">4. DENTIN </string>
	<string name="PulpaGigi">5. PULPA </string>
	<string name="GusiGigi">6. GUSI</string>
	<string name="SementumGigi">7. SEMENTUM</string>
	<string name="TulangGigi">8. TULANG ALVEOLAR</string>
	<string name="LigamenGigi">9. LIGAMEN PERIODONTAL</string>
	
	 
	
	<string name="textMahkotaGigi">Mahkota gigi merupakan bagian gigi yang dapat terlihat. </string>
	<string name="textAkarGigi">Akar gigi merupakan bagian gigi yang tidak terlihat dan tersusun dari berbagai
	    macam jaringan. </string>
	<string name="textEmailGigi">Email merupakan lapisan terluar mahkota gigi dan paling kuat.</string>
	<string name="textDentinGigi">Dentin adalah lapisan kedua setelah Email yang tidak kalah kuat.</string>
	<string name="textPulpaGigi">Pulpa adalah lapisan terakhir berupa sebuah ruangan yang berisi sumber
	    kehidupan gigi. Pulpa berisi pembuluh darah yang memberi asupan nutrisi dan pembuluh syaraf
	    yang memberikan sensor kehidupan.</string>
	<string name="textGusiGigi">Gusi merupakan jaringan yang menutup akar gigi.</string>
	<string name="textSementumGigi">Sementum adalah lapisan terluar pada bagian akar gigi. </string>
	<string name="textTulangGigi">Tulang alveolar adalah tepat gigi tertanam.</string>	
	<string name="textLigamenGigi">Ligamen periodontal berfungsi untuk mengikat gigi yang tertanam pada tulang alveolar.</string>
	
	    
	
	
	
	<string name="app_website">Dyah.nurlita.s@mail.ugm.ac.id</string>
    <string name="app_name_version">Senyum Ceria</string>
    <string name="app_copyright">2015 \u00A9 Lita</string>
    <string name="Credits1">Credits :</string>
    <string name="Credits">Application By :</string>
    <string name="Project">Dyah Nurlita S (KOMSI UGM 2012)</string>
    <string name="Credits2">Video By :</string>
    <string name="Project2">Maya Angela (FKG UGM 2011)</string>
    <string name="Credits3">Picture By :</string>
    <string name="Project3">FKG UGM</string>
    <string name="Credits4">Icon By :</string>
    <string name="ProjectEmpat">Dyah Nurlita S</string>
    <string name="Project4">freepik - www.flaticon.com</string>
    <string name="web">www.facebook.com</string>
	
	
	<string name="Karies">Karies gigi atau (gigi berlubang) adalah kerusakan jaringan keras pada 
	gigi yang disebabkan oleh berbagai faktor.</string>
	
	<string name="Periksa">Periksa gigimu ke dokter gigi MINIMAL 6 BULAN SEKALI
	    secara rutin. Tidak harus menunggu sakit untuk pergi ke dokter gigi. 
	    Gigi yang sehat juga diperiksakan untuk mencegah terjadinya penyakit pada gigi.</string>
	    
	<string name="Makanan">Coklat, es krim, donat, kue, dan permen adalah makanan favorit setiap
	    orang. Makanan-makanan tersebut merupakan sebagian contoh dari makanan MANIS dan LENGKET
	    . Makanan manis dan lengket tidak dilarang untuk dimakan, akan tetapi tidak boleh
	    berlebihan dan HARUS MENYIKAT GIGI SETELAH MAKAN MAKANAN TERSEBUT.</string>
	    
	
	    
	<string name="SikatGigi">
	    Agar gigi bersih, tidak perlu menyikat gigi dengan keras. Menyikat gigi dengan cara yang benar dapat membuat gigi bersih
	    
	   
</string>

	<string name="SikatGigiDua">
	    Jika ingin menyikat gigi ingatlah warna bendera Indonesia. Ya! Merah dan putih adalah warna bendera Indonesia
	    . Di dalam mulut, GUSI BERWARNA MERAH dan GIGI BERWARNA PUTIH	   
</string>

	<string name="SikatGigiTiga">
	     SIKATLAH SELURUH PERMUKAAN GIGI DARI MERAH KE PUTIH
	    (dari gusi ke gigi). Sikatlah gigi bagian mengunyah dari arah belakang ke depan. CUKUP BERKUMUR SEKALI setelah sikat gigi
	    supaya zat baik dari pasta gigi tidak ikut terbuang.
	   
</string>

	 <!-- BUAT NOTIF -->
	 <string name="notifPagi">SIKAT GIGI PAGI</string>
	 <string name="notifMalam">SIKAT GIGI MALAM</string>
	 <string name="notifPeriksa">PERIKSA GIGI</string>
	 
	 <string name="textnotifPagi">Menyikat gigi di pagi hari setelah bangun tidur akan membersihkan gigi dan menyegarkan
	    mulut.</string>
	    
	  <string name="textnotifMalam"> Menyikat gigi di malam hari juga sangat penting. Sisa makanan akan menempel dalam waktu yang lama saat kita
	    tidur.</string>
	    
	  <string name="textnotifPeriksa"> Waktunya memeriksakan gigi. Agar gigi tetap sehat dan terhindar dari penyakit.
	      Jangan lupa ya, jadwal periksa selanjutnya tanggal</string>
	

	
	
	 
    <string name="title_logo">SENYUMKU CERIA</string>
    <string name="title_logo2">GIGIKU SEHAT</string>
    <string name="btn_skip_intro">Skip Intro</string>
     
     
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
		
</resources>