
  <LinearLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:id="@+id/layout_root"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:orientation="vertical"
  	android:padding="5dp">
  	
      <ScrollView
         android:id="@+id/ScrollView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
          >
          
           <LinearLayout
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:orientation="vertical"
  			android:padding="5dp">
  	
    <ImageView
		android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:src="@drawable/iconsenyum"
    	android:layout_gravity="center"
    	android:layout_marginBottom="10dp"
    	android:contentDescription="@string/imageViewDescription"
    />
    
    <TextView
        android:id="@+id/NamaAplikasi"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/app_name_version"
    	android:layout_gravity="center"
    	android:textStyle="bold"
    	android:textSize="18sp"
    ></TextView>
    
    <TextView
        android:id="@+id/Tahun"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
   	 	android:text="@string/app_copyright"
    	android:layout_gravity="center"
    	android:textSize="16sp"
    ></TextView>
    
    <TextView
        android:id="@+id/Email"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/app_website"
    	android:layout_marginBottom="20dp"
    	android:layout_gravity="center"
    	android:textSize="16sp"
    ></TextView>
    
    
    <TextView
        android:id="@+id/Credits"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/Credits1"
    	android:textStyle="bold"
    	android:layout_marginBottom="5dp"
    	android:layout_gravity="center"
    	android:textSize="16sp"
    ></TextView>
    
    <TextView
        android:id="@+id/Aplikasi"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/Credits"
    	android:textStyle="bold"
    	android:layout_marginBottom="5dp"
    	android:layout_gravity="center"
    	android:textSize="16sp"
    ></TextView>
    
    <TextView
        android:id="@+id/Lita"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
   	 	android:text="@string/Project"
    	android:layout_gravity="center"
    	android:textSize="16sp"
    ></TextView>
    
    <TextView
        android:id="@+id/Video"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/Credits2"
    	android:layout_marginTop="10dp"
    	android:textStyle="bold"
    	android:layout_marginBottom="5dp"
    	android:layout_gravity="center"
    	android:textSize="16sp"
    ></TextView>
    
    <TextView
        android:id="@+id/Maya"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
   	 	android:text="@string/Project2"
    	android:layout_gravity="center"
    	android:textSize="16sp"
    	
    ></TextView>
    
     <TextView
        android:id="@+id/Gambar"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/Credits3"
    	android:layout_marginTop="10dp"
    	android:textStyle="bold"
    	android:layout_marginBottom="5dp"
    	android:layout_gravity="center"
    	android:textSize="16sp"
    ></TextView>
    
    <TextView
        android:id="@+id/Fkg"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
   	 	android:text="@string/Project3"
    	android:layout_gravity="center"
    	android:textSize="16sp"
    	
    ></TextView>
    
     <TextView
        android:id="@+id/Icon"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/Credits4"
    	android:layout_marginTop="10dp"
    	android:textStyle="bold"
    	android:layout_marginBottom="5dp"
    	android:layout_gravity="center"
    	android:textSize="16sp"
    ></TextView>
     
     <TextView
        android:id="@+id/Dyah"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
   	 	android:text="@string/ProjectEmpat"
    	android:layout_gravity="center"
    	android:textSize="16sp"
    	
    ></TextView>
    
    <TextView
        android:id="@+id/Flaticon"
        android:layout_marginTop="5dp"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
   	 	android:text="@string/Project4"
    	android:layout_gravity="center"
    	android:textSize="16sp"
    	
    ></TextView>
    
    
    
     
    </LinearLayout>
    </ScrollView>
    
   <!--  <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/web"
    	android:layout_gravity="center"
    	android:textSize="16sp"
    	android:autoLink="web"
    	android:linksClickable="true"
    ></TextView> -->
    
 </LinearLayout>

